Update index.html got rid of tools section

--- a/index.html
+++ b/index.html
@@ -55,13 +55,13 @@
       margin-bottom: 1rem;
       text-align: center;
     }
-    .tool-list, .team-grid {
+    .team-grid {
       display: flex;
       flex-wrap: wrap;
       gap: 2rem;
       justify-content: center;
     }
-    .tool-item, .team-member {
+    .team-member {
       background: white;
       border-radius: 10px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
@@ -69,7 +69,7 @@
       text-align: center;
       width: 250px;
     }
-    .tool-item h3, .team-member h3 {
+    .team-member h3 {
       margin-bottom: 0.5rem;
     }
     .team-member img {
@@ -123,7 +123,6 @@
   <header>
     <img src="3DVR.png" alt="3dvr.tech logo">
     <nav>
-      <a href="#tools">Tools</a>
       <a href="#projects">Projects</a>
       <a href="#team">Team</a>
       <a href="#subscribe">Subscribe</a>
@@ -136,15 +135,10 @@
     <p>Open-source tech for digital nomads, creators, and explorers</p>
   </section>
 
-  <section class="section" id="tools">
-    <h2>Our Stack</h2>
-    <div class="tool-list">
-      <div class="tool-item"><h3>Unity</h3><p>Immersive environments & experiences</p></div>
-      <div class="tool-item"><h3>Three.js</h3><p>3D Web Graphics</p></div>
-      <div class="tool-item"><h3>React</h3><p>Interactive Web Apps</p></div>
-      <div class="tool-item"><h3>Flutter</h3><p>Cross-Platform Mobile</p></div>
-      <div class="tool-item"><h3>Laravel</h3><p>Powerful Backend Services</p></div>
-    </div>
+  <section class="cta" id="subscribe">
+    <h2>Websites & Apps for $20/month</h2>
+    <p>Subscribe to get a personal site, app, or support package tailored to your vision. Simple, clean, and open-source powered by 3dvr.tech.</p>
+    <a href="#contact">Subscribe Now</a>
   </section>
 
   <section class="section" id="projects">
@@ -192,12 +186,6 @@
         <p>Cross-platform mobile builder with an eye for design.</p>
       </div>
     </div>
-  </section>
-
-  <section class="cta" id="subscribe">
-    <h2>Websites & Apps for $20/month</h2>
-    <p>Subscribe to get a personal site, app, or support package tailored to your vision. Simple, clean, and open-source powered by 3dvr.tech.</p>
-    <a href="#contact">Subscribe Now</a>
   </section>
 
   <footer>
