Update index.html Fix colors and add stripe link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     }
     nav a:hover { text-decoration: underline; }
     .hero {
-      background: linear-gradient(#3b4548, #8ec6d7);
+      background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
       color: white;
       text-align: center;
       padding: 8rem 2rem 5rem;
@@ -90,7 +90,7 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
     .cta {
-      background: #d0ffd0;
+      background: linear-gradient(135deg, #a8ff78 0%, #78ffd6 100%);
       text-align: center;
       padding: 4rem 2rem;
     }
@@ -138,7 +138,7 @@
   <section class="cta" id="subscribe">
     <h2>Websites & Apps for $20/month</h2>
     <p>Subscribe to get a personal site, app, or support package tailored to your vision. Simple, clean, and open-source powered by 3dvr.tech.</p>
-    <a href="#contact">Subscribe Now</a>
+    <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe Now</a>
   </section>
 
   <section class="section" id="projects">
