--- a/index.html
+++ b/index.html
@@ -5,8 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3dvr.tech</title>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body { font-family: sans-serif; background-color: #f5f5f5; color: #222; line-height: 1.6; }
+    :root {
+      color-scheme: light dark;
+    }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: sans-serif;
+      background-color: #f4f4f4;
+      color: #222;
+      line-height: 1.6;
+      transition: background 0.3s, color 0.3s;
+    }
+    @media (prefers-color-scheme: dark) {
+      body {
+        background-color: #121212;
+        color: #e0e0e0;
+      }
+      .team-member, .section, .cta {
+        background-color: #1e1e1e;
+        color: #e0e0e0;
+      }
+      header, footer {
+        background-color: #000;
+      }
+      .cta a {
+        background-color: #3498db;
+      }
+    }
     header {
       background-color: #3b4548;
       padding: 1rem 2rem;
@@ -27,9 +56,11 @@
       margin: 0 1rem;
       font-weight: bold;
     }
-    nav a:hover { text-decoration: underline; }
+    nav a:hover {
+      text-decoration: underline;
+    }
     .hero {
-      background: linear-gradient(135deg, #2c3e50 0%, #3498db 100%);
+      background: linear-gradient(160deg, #232526 0%, #414345 100%);
       color: white;
       text-align: center;
       padding: 8rem 2rem 5rem;
@@ -90,9 +121,10 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
     .cta {
-      background: linear-gradient(135deg, #a8ff78 0%, #78ffd6 100%);
+      background: linear-gradient(160deg, #56ab2f 0%, #a8e063 100%);
       text-align: center;
       padding: 4rem 2rem;
+      transition: background 0.3s ease;
     }
     .cta h2 {
       font-size: 2.5rem;
