Update index.html Added Team Websites

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       text-decoration: underline;
     }
     .hero {
-      background: linear-gradient(160deg, #232526 0%, #414345 100%);
+      background: linear-gradient(160deg, #2c3e50 0%, #4ca1af 100%);
       color: white;
       text-align: center;
       padding: 8rem 2rem 5rem;
@@ -110,6 +110,13 @@
       object-fit: cover;
       margin-bottom: 1rem;
     }
+    .team-member a {
+      text-decoration: none;
+      color: #3498db;
+      font-size: 0.9rem;
+      display: block;
+      margin-top: 0.5rem;
+    }
     .video-container {
       text-align: center;
       margin-top: 2rem;
@@ -121,7 +128,7 @@
       box-shadow: 0 4px 10px rgba(0,0,0,0.2);
     }
     .cta {
-      background: linear-gradient(160deg, #56ab2f 0%, #a8e063 100%);
+      background: linear-gradient(160deg, #4ca1af 0%, #56ab2f 100%);
       text-align: center;
       padding: 4rem 2rem;
       transition: background 0.3s ease;
@@ -189,33 +196,38 @@
     <div class="team-grid">
       <div class="team-member">
         <img src="profile-thomas.jpg" alt="Thomas">
-        <h3>Thomas M. Stephens</h3>
+        <h3>Thomas Stephens</h3>
         <p>CEO / CTO / Founder</p>
         <p>Visionary technologist creating the tools of tomorrow.</p>
+        <a href="https://tmsteph.com" target="_blank">tmsteph.com</a>
       </div>
       <div class="team-member">
         <img src="profile-bodhi.jpg" alt="Bodhi">
-        <h3>Bodhi</h3>
+        <h3>Bodhi Lowski</h3>
         <p>Chief Marketing Officer</p>
         <p>Building the brand through grassroots storytelling and growth.</p>
+        <a href="https://bodhi-lowski.vercel.app/" target="_blank">bodhi-lowski.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="profile-david.jpg" alt="David">
-        <h3>David Martínez R.</h3>
+        <h3>David Martinez</h3>
         <p>Lead Developer</p>
         <p>Crafting immersive 3D and web experiences with finesse.</p>
+        <a href="https://david-martinez.vercel.app/" target="_blank">david-martinez.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="profile-esai.jpg" alt="Esai">
-        <h3>Esai</h3>
+        <h3>Esai Gamboa</h3>
         <p>Developer</p>
         <p>Frontend expert focused on clean, responsive interfaces.</p>
+        <a href="https://esai-gamboa.vercel.app/" target="_blank">esai-gamboa.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="profile-brandon.jpg" alt="Brandon">
-        <h3>Brandon</h3>
+        <h3>Brandon Adolfo</h3>
         <p>Flutter Developer</p>
         <p>Cross-platform mobile builder with an eye for design.</p>
+        <a href="https://brandon-adolfo.vercel.app/" target="_blank">brandon-adolfo.vercel.app</a>
       </div>
     </div>
   </section>
