Update index.html Add home button and make logo clickable

--- a/index.html
+++ b/index.html
@@ -159,10 +159,11 @@
     }
   </style>
 </head>
-<body>
+<body id="top">
   <header>
-    <img src="3DVR.png" alt="3dvr.tech logo">
+    <a href="#top"><img src="3DVR.png" alt="3dvr.tech logo"></a>
     <nav>
+      <a href="#top">Home</a>
       <a href="#projects">Projects</a>
       <a href="#team">Team</a>
       <a href="#subscribe">Subscribe</a>
