--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
     nav a:hover {
       text-decoration: underline;
     }
-    .hero {
-      background: linear-gradient(160deg, #2c3e50 0%, #4ca1af 100%);
-      color: white;
-      text-align: center;
-      padding: 8rem 2rem 5rem;
+    $1min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 2rem;
     }
     .hero img {
       height: 20vw;
