Update index.html fix hero section

--- a/index.html
+++ b/index.html
@@ -60,11 +60,17 @@
     nav a:hover {
       text-decoration: underline;
     }
-    $1min-height: 100vh;
+    .hero {
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       justify-content: center;
+      align-items: center;
       padding: 2rem;
+      background: linear-gradient(160deg, #2c3e50 0%, #4ca1af 100%);
+      color: white;
+      text-align: center;
+    }
     }
     .hero img {
       height: 20vw;
