Update index.html fix logo

--- a/index.html
+++ b/index.html
@@ -49,7 +49,9 @@
       z-index: 1000;
     }
     header img {
-      height: 50px;
+      height: 40px;
+      max-width: 150px;
+      object-fit: contain;
     }
     nav a {
       color: white;
@@ -74,6 +76,8 @@
     }
     .hero img {
       height: 20vw;
+      max-height: 200px;
+      object-fit: contain;
     }
     .hero h1 {
       font-size: 4rem;
