--- a/index.html
+++ b/index.html
@@ -75,10 +75,13 @@
     }
     }
     .hero img {
-      height: 20vw;
-      max-height: 200px;
-      object-fit: contain;
-    }
+  height: auto;
+  max-height: 120px;
+  width: auto;
+  max-width: 80%;
+  object-fit: contain;
+  margin-bottom: 1rem;
+}
     .hero h1 {
       font-size: 4rem;
       margin-top: 1rem;
