--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
     </nav>
   </header>
 
-  <section class="hero">
+  <section class="hero" style="background-color: #1e1e1e; background-image: none;">
     <img src="3DVR.png" alt="3dvr.tech logo" />
     <h1>Build The Future</h1>
     <p>Open-source tech for digital nomads, creators, and explorers</p>
