Update index.html fix logo again

--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     }
     .hero img {
   height: auto;
-  max-height: 120px;
+  max-height: 80px;
   width: auto;
-  max-width: 80%;
+  max-width: 300px;
   object-fit: contain;
   margin-bottom: 1rem;
 }
@@ -183,7 +183,7 @@
     </nav>
   </header>
 
-  <section class="hero" style="background-color: #1e1e1e; background-image: none;">
+  <section class="hero">
     <img src="3DVR.png" alt="3dvr.tech logo" />
     <h1>Build The Future</h1>
     <p>Open-source tech for digital nomads, creators, and explorers</p>
