--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
     }
     .hero img {
   height: auto;
-  max-height: 60px;
+  max-height: 4rem;
   width: auto;
-  max-width: 200px;
+  max-width: 15rem;
   object-fit: contain;
   margin-bottom: 1rem;
 }
