Update index.html hero logo blank

--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
   </header>
 
   <section class="hero">
-    <img src="3DVR.png" alt="3dvr.tech logo" />
+    <img src="" alt="" />
     <h1>Build The Future</h1>
     <p>Open-source tech for digital nomads, creators, and explorers</p>
   </section>
