Update index.html fix hero logo

--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
     }
     }
     .hero img {
+  width: 15vw;
+  max-width: 150px;
   height: auto;
-  max-height: 4rem;
-  width: auto;
-  max-width: 15rem;
   object-fit: contain;
   margin-bottom: 1rem;
 }
@@ -184,7 +183,7 @@
   </header>
 
   <section class="hero">
-    <img src="" alt="" />
+    <img src="3DVR.png" alt="3dvr.tech logo" />
     <h1>Build The Future</h1>
     <p>Open-source tech for digital nomads, creators, and explorers</p>
   </section>
