Update index.html Fix Hero Logo

--- a/index.html
+++ b/index.html
@@ -75,11 +75,12 @@
     }
     }
     .hero img {
-  width: 15vw;
-  max-width: 150px;
+  display: block;
+  width: 10vw;
+  max-width: 120px;
   height: auto;
   object-fit: contain;
-  margin-bottom: 1rem;
+  margin: 0 auto 1rem;
 }
     .hero h1 {
       font-size: 4rem;
