--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
     }
     .hero img {
   display: block;
-  width: 10vw;
-  max-width: 120px;
+  max-width: 80px;
+  max-height: 80px;
+  width: auto;
   height: auto;
   object-fit: contain;
   margin: 0 auto 1rem;
