Update index.html fix hero logo

--- a/index.html
+++ b/index.html
@@ -75,11 +75,8 @@
     }
     }
     .hero img {
-  display: block;
-  max-width: 80px;
-  max-height: 80px;
-  width: auto;
-  height: auto;
+  width: 100px;
+  height: 100px;
   object-fit: contain;
   margin: 0 auto 1rem;
 }
