Update index.html fix hero logo

--- a/index.html
+++ b/index.html
@@ -75,9 +75,8 @@
     }
     }
     .hero img {
-  width: 100px;
-  height: 100px;
-  object-fit: contain;
+  width: 60px;
+  height: auto;
   margin: 0 auto 1rem;
 }
     .hero h1 {
