--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
   text-align: center;
 }
     .hero img {
-  width: 60px;
+  width: 15vw;
+  max-width: 100px;
   height: auto;
-  margin: 0 auto 1rem;
+  margin: 1rem auto;
 }
     .hero h1 {
       font-size: 4rem;
@@ -165,6 +166,24 @@
       color: white;
       text-align: center;
       padding: 2rem 1rem;
+    }
+      @media (max-width: 768px) {
+      .hero h1 {
+        font-size: 2.5rem;
+      }
+      .hero p {
+        font-size: 1rem;
+      }
+      .cta h2 {
+        font-size: 2rem;
+      }
+      .cta p, .cta a {
+        font-size: 1rem;
+      }
+      .team-member {
+        width: 100%;
+        max-width: 300px;
+      }
     }
   </style>
 </head>
