Update index.html bigger hero image and better spacing

--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   text-align: center;
 }
     .hero img {
-  width: 60vw;
-  max-width: 400px;
+  width: 80vw;
+  max-width: 500px;
   height: auto;
-  margin: 1.5rem auto;
+  margin: 0.5rem auto 0.5rem;
 }
     .hero h1 {
       font-size: 4rem;
