Update index.html Fix Navbar

--- a/index.html
+++ b/index.html
@@ -25,23 +25,15 @@
       transition: background 0.3s, color 0.3s;
     }
     @media (prefers-color-scheme: dark) {
-      body {
-        background-color: #121212;
-        color: #e0e0e0;
-      }
-      .team-member, .section, .cta {
-        background-color: #1e1e1e;
-        color: #e0e0e0;
-      }
-      header, footer {
-        background-color: #000;
-      }
+$1header, footer {
+    background-color: rgba(44, 62, 80, 0.8);
+  }
       .cta a {
         background-color: #3498db;
       }
     }
     header {
-  background-color: rgba(59, 69, 72, 0.8);
+  background-color: rgba(44, 62, 80, 0.8);
   padding: 0.5rem 1rem;
   color: white;
   display: flex;
