--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       padding: 0;
     }
     body {
+  background-color: #2c3e50;
       font-family: sans-serif;
       background-color: #f4f4f4;
       color: #222;
