--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
       scroll-behavior: smooth;
     }
     :root {
-      color-scheme: light dark;
-    }
+  color-scheme: light dark;
+  background-color: #2c3e50;
+}
     * {
       box-sizing: border-box;
       margin: 0;
@@ -19,12 +20,12 @@
     }
     body {
   background-color: #2c3e50;
-      font-family: sans-serif;
-      background-color: #f4f4f4;
-      color: #222;
-      line-height: 1.6;
-      transition: background 0.3s, color 0.3s;
-    }
+  font-family: sans-serif;
+  color: #222;
+  line-height: 1.6;
+  transition: background 0.3s, color 0.3s;
+  overflow-x: hidden;
+}
     @media (prefers-color-scheme: dark) {
 $1header, footer {
     background-color: rgba(44, 62, 80, 0.8);
