--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ $1header, footer {
   justify-content: center;
   align-items: center;
   padding: 2rem;
-  background: linear-gradient(160deg, #2c3e50 0%, #4ca1af 100%);
+  background: linear-gradient(to bottom, #2c3e50 0%, #4ca1af 100%);
   color: white;
   text-align: center;
 }
