Update index.html fix images

--- a/index.html
+++ b/index.html
@@ -241,35 +241,35 @@ $1header, footer {
     <h2>Meet the Team</h2>
     <div class="team-grid">
       <div class="team-member">
-        <img src="profile-thomas.jpg" alt="Thomas">
+        <img src="Thomas_Stephens.jpg" alt="Thomas Stephens">
         <h3>Thomas Stephens</h3>
         <p>CEO / CTO / Founder</p>
         <p>Visionary technologist creating the tools of tomorrow.</p>
         <a href="https://tmsteph.com" target="_blank">tmsteph.com</a>
       </div>
       <div class="team-member">
-        <img src="profile-bodhi.jpg" alt="Bodhi">
+        <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski">
         <h3>Bodhi Lowski</h3>
         <p>Chief Marketing Officer</p>
         <p>Building the brand through grassroots storytelling and growth.</p>
         <a href="https://bodhi-lowski.vercel.app/" target="_blank">bodhi-lowski.vercel.app</a>
       </div>
       <div class="team-member">
-        <img src="profile-david.jpg" alt="David">
+        <img src="David_Martinez.jpg" alt="David Martinez">
         <h3>David Martinez</h3>
         <p>Lead Developer</p>
         <p>Crafting immersive 3D and web experiences with finesse.</p>
         <a href="https://david-martinez.vercel.app/" target="_blank">david-martinez.vercel.app</a>
       </div>
       <div class="team-member">
-        <img src="profile-esai.jpg" alt="Esai">
+        <img src="Esai_Gamboa.jpg" alt="Esai Gamboa">
         <h3>Esai Gamboa</h3>
         <p>Developer</p>
         <p>Frontend expert focused on clean, responsive interfaces.</p>
         <a href="https://esai-gamboa.vercel.app/" target="_blank">esai-gamboa.vercel.app</a>
       </div>
       <div class="team-member">
-        <img src="profile-brandon.jpg" alt="Brandon">
+        <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo">
         <h3>Brandon Adolfo</h3>
         <p>Flutter Developer</p>
         <p>Cross-platform mobile builder with an eye for design.</p>
