Update index.html fix subscription

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@ $1header, footer {
     <a href="#top"><img src="3DVR.png" alt="3dvr.tech logo"></a>
     <nav>
       <a href="#top">Home</a>
-      <a href="#team">Team</a>
       <a href="#subscribe">Subscribe</a>
+      <a href="#team">Team</a>
     </nav>
   </header>
 
@@ -217,7 +217,7 @@ $1header, footer {
     <p>Open-source tech for digital nomads, creators, and explorers</p>
   </section>
 
-  <section class="cta" id="subscribe">
+  <section class="cta" id="subscribe" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: center;">
     <h2>Websites & Apps for $20/month</h2>
     <p>Subscribe to get a personal site, app, or support package tailored to your vision. Simple, clean, and open-source powered by 3dvr.tech.</p>
     <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe Now</a>
