Update index.html Fix Esai Description

--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@ $1header, footer {
       </div>
       <div class="team-member">
         <img src="Esai_Gamboa.jpg" alt="Esai Gamboa">
-        <h3>Esai Gamboa</h3>
+<h3>Esai Gamboa</h3>
 <p>Developer</p>
-<p></p>
+<p>Frontend expert focused on clean, responsive interfaces.</p>
         <a href="https://esai-gamboa.vercel.app/" target="_blank">esai-gamboa.vercel.app</a>
       </div>
       <div class="team-member">
