--- a/index.html
+++ b/index.html
@@ -10,43 +10,43 @@
       scroll-behavior: smooth;
     }
     :root {
-  color-scheme: light dark;
-  background-color: #2c3e50;
-}
+      color-scheme: light dark;
+      background-color: #2c3e50;
+    }
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
     body {
-  background-color: #2c3e50;
-  font-family: sans-serif;
-  color: #222;
-  line-height: 1.6;
-  transition: background 0.3s, color 0.3s;
-  overflow-x: hidden;
-}
+      background-color: #2c3e50;
+      font-family: sans-serif;
+      color: #222;
+      line-height: 1.6;
+      transition: background 0.3s, color 0.3s;
+      overflow-x: hidden;
+    }
     @media (prefers-color-scheme: dark) {
-$1header, footer {
-    background-color: rgba(44, 62, 80, 0.8);
-  }
+      header, footer {
+        background-color: rgba(44, 62, 80, 0.8);
+      }
       .cta a {
         background-color: #3498db;
       }
     }
     header {
-  background-color: rgba(44, 62, 80, 0.8);
-  padding: 0.5rem 1rem;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  position: sticky;
-  top: 0;
-  z-index: 1000;
-  opacity: 0;
-  animation: fadeInHeader 1.5s ease-in-out 1.2s forwards;
-}
+      background-color: rgba(44, 62, 80, 0.8);
+      padding: 0.5rem 1rem;
+      color: white;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      opacity: 0;
+      animation: fadeInHeader 1.5s ease-in-out 1.2s forwards;
+    }
     header img {
       height: 40px;
       max-width: 150px;
@@ -62,24 +62,25 @@ $1header, footer {
       text-decoration: underline;
     }
     .hero {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 2rem;
-  background: linear-gradient(to bottom, #2c3e50 0%, #4ca1af 100%);
-  color: white;
-  text-align: center;
-}
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      padding: 2rem;
+      background: linear-gradient(to bottom, #2c3e50 0%, #4ca1af 100%);
+      color: white;
+      text-align: center;
+    }
     .hero img {
-  width: 90vw;
-  max-width: 600px;
-  height: auto;
-  margin: 0.25rem auto 0.5rem;
-  opacity: 0;
-  animation: fadeInLogo 1.5s ease-in-out forwards;
-}
+      width: 90vw;
+      max-width: 600px;
+      height: auto;
+      display: block;
+      margin: 0.25rem auto 0.5rem;
+      opacity: 0;
+      animation: fadeInLogo 1.5s ease-in-out forwards;
+    }
     .hero h1 {
       font-size: 4rem;
       margin-top: 1rem;
@@ -111,6 +112,11 @@ $1header, footer {
       padding: 1.5rem;
       text-align: center;
       width: 250px;
+      cursor: pointer;
+      transition: transform 0.3s ease;
+    }
+    .team-member:hover {
+      transform: scale(1.03);
     }
     .team-member h3 {
       margin-bottom: 0.5rem;
@@ -123,9 +129,9 @@ $1header, footer {
       margin-bottom: 1rem;
     }
     .team-member a {
-  display: none !important;
-  pointer-events: none;
-}
+      display: none !important;
+      pointer-events: none;
+    }
     .video-container {
       text-align: center;
       margin-top: 2rem;
@@ -141,6 +147,11 @@ $1header, footer {
       text-align: center;
       padding: 4rem 2rem;
       transition: background 0.3s ease;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
     }
     .cta h2 {
       font-size: 2.5rem;
@@ -148,16 +159,25 @@ $1header, footer {
     .cta p {
       font-size: 1.3rem;
       margin-top: 1rem;
+      max-width: 600px;
     }
     .cta a {
       display: inline-block;
       margin-top: 2rem;
       background: #3b4548;
       color: white;
-      padding: 1rem 2rem;
+      padding: clamp(0.75rem, 2vw, 1rem) clamp(1.5rem, 4vw, 2rem);
       border-radius: 8px;
       text-decoration: none;
-      font-size: 1.2rem;
+      font-size: clamp(1rem, 2.5vw, 1.2rem);
+      max-width: 300px;
+      width: 100%;
+      text-align: center;
+      transition: background 0.3s ease, transform 0.2s ease;
+    }
+    .cta a:hover {
+      background: #2c3e50;
+      transform: translateY(-2px);
     }
     footer {
       background: #3b4548;
@@ -165,7 +185,7 @@ $1header, footer {
       text-align: center;
       padding: 2rem 1rem;
     }
-      @media (max-width: 768px) {
+    @media (max-width: 768px) {
       .hero h1 {
         font-size: 2.5rem;
       }
@@ -183,23 +203,15 @@ $1header, footer {
         max-width: 300px;
       }
     }
-  @keyframes fadeInLogo {
-  0% { opacity: 0; transform: translateY(-10px); }
-  100% { opacity: 1; transform: translateY(0); }
-}
-  @keyframes fadeInHeader {
-  0% { opacity: 0; transform: translateY(-10px); }
-  100% { opacity: 1; transform: translateY(0); }
-}
-  .team-member {
-  cursor: pointer;
-  transition: transform 0.3s ease;
-}
-.team-member:hover {
-  transform: scale(1.03);
-}
-
-</style>
+    @keyframes fadeInLogo {
+      0% { opacity: 0; transform: translateY(-10px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+    @keyframes fadeInHeader {
+      0% { opacity: 0; transform: translateY(-10px); }
+      100% { opacity: 1; transform: translateY(0); }
+    }
+  </style>
 </head>
 <body id="top">
   <header>
@@ -217,13 +229,11 @@ $1header, footer {
     <p>Open-source tech for digital nomads, creators, and explorers</p>
   </section>
 
-  <section class="cta" id="subscribe" style="min-height: 100vh; display: flex; flex-direction: column; justify-content: center;">
+  <section class="cta" id="subscribe">
     <h2>Websites & Apps for $20/month</h2>
     <p>Subscribe to get a personal site, app, or support package tailored to your vision. Simple, clean, and open-source powered by 3dvr.tech.</p>
     <a href="https://buy.stripe.com/9AQ7uvfne7FZb1SaEE" target="_blank">Subscribe Now</a>
   </section>
-
-  
 
   <section class="section" id="team">
     <h2>Meet the Team</h2>
@@ -251,15 +261,15 @@ $1header, footer {
       </div>
       <div class="team-member">
         <img src="Esai_Gamboa.jpg" alt="Esai Gamboa">
-<h3>Esai Gamboa</h3>
-<p>Developer</p>
-<p>Frontend expert focused on clean, responsive interfaces.</p>
+        <h3>Esai Gamboa</h3>
+        <p>Developer</p>
+        <p>Frontend expert focused on clean, responsive interfaces.</p>
         <a href="https://esai-gamboa.vercel.app/" target="_blank">esai-gamboa.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo">
         <h3>Brandon Adolfo</h3>
-<p>Developer</p>
+        <p>Developer</p>
         <p>Cross-platform mobile builder with an eye for design.</p>
         <a href="https://brandon-adolfo.vercel.app/" target="_blank">brandon-adolfo.vercel.app</a>
       </div>
@@ -269,15 +279,16 @@ $1header, footer {
   <footer>
     <p>© 2025 3dvr.tech — Built for the future, powered by community.</p>
   </footer>
-<script>
-  document.querySelectorAll('.team-member').forEach(member => {
-    member.addEventListener('click', () => {
-      const link = member.querySelector('a');
-      if (link) {
-        window.open(link.href, '_blank');
-      }
+
+  <script>
+    document.querySelectorAll('.team-member').forEach(member => {
+      member.addEventListener('click', () => {
+        const link = member.querySelector('a');
+        if (link) {
+          window.open(link.href, '_blank');
+        }
+      });
     });
-  });
-</script>
+  </script>
 </body>
 </html>
