--- a/index.html
+++ b/index.html
@@ -72,12 +72,16 @@
       color: white;
       text-align: center;
     }
+    .hero-img-wrapper {
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
     .hero img {
       width: 90vw;
       max-width: 600px;
       height: auto;
-      display: block;
-      margin: 0.25rem auto 0.5rem;
       opacity: 0;
       animation: fadeInLogo 1.5s ease-in-out forwards;
     }
@@ -132,26 +136,16 @@
       display: none !important;
       pointer-events: none;
     }
-    .video-container {
-      text-align: center;
-      margin-top: 2rem;
-    }
-    .video-container video {
-      width: 100%;
-      max-width: 600px;
-      border-radius: 10px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-    }
     .cta {
       background: linear-gradient(160deg, #4ca1af 0%, #56ab2f 100%);
       text-align: center;
       padding: 4rem 2rem;
-      transition: background 0.3s ease;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
+      transition: background 0.3s ease;
     }
     .cta h2 {
       font-size: 2.5rem;
@@ -224,7 +218,9 @@
   </header>
 
   <section class="hero">
-    <img src="3DVR.png" alt="3dvr.tech logo" />
+    <div class="hero-img-wrapper">
+      <img src="3DVR.png" alt="3dvr.tech logo" />
+    </div>
     <h1>Build The Future</h1>
     <p>Open-source tech for digital nomads, creators, and explorers</p>
   </section>
