--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>3dvr.tech</title>
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+
   <style>
     html {
       scroll-behavior: smooth;
@@ -20,7 +24,7 @@
     }
     body {
       background-color: #2c3e50;
-      font-family: sans-serif;
+      font-family: 'Inter', sans-serif;
       color: #222;
       line-height: 1.6;
       transition: background 0.3s, color 0.3s;
@@ -86,9 +90,11 @@
       animation: fadeInLogo 1.5s ease-in-out forwards;
     }
     .hero h1 {
+      font-family: 'Orbitron', sans-serif;
       font-size: clamp(2rem, 8vw, 4rem);
       white-space: nowrap;
       margin-top: 1rem;
+      letter-spacing: 0.02em;
     }
     .hero p {
       font-size: 1.5rem;
@@ -100,9 +106,11 @@
       margin: auto;
     }
     .section h2 {
+      font-family: 'Orbitron', sans-serif;
       font-size: 2rem;
       margin-bottom: 1rem;
       text-align: center;
+      letter-spacing: 0.02em;
     }
     .team-grid {
       display: flex;
@@ -124,6 +132,7 @@
       transform: scale(1.03);
     }
     .team-member h3 {
+      font-family: 'Orbitron', sans-serif;
       margin-bottom: 0.5rem;
     }
     .team-member img {
@@ -149,7 +158,9 @@
       transition: background 0.3s ease;
     }
     .cta h2 {
+      font-family: 'Orbitron', sans-serif;
       font-size: 2.5rem;
+      letter-spacing: 0.02em;
     }
     .cta p {
       font-size: 1.3rem;
