--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>3dvr.tech</title>
 
   <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 
   <style>
     html {
@@ -90,11 +90,11 @@
       animation: fadeInLogo 1.5s ease-in-out forwards;
     }
     .hero h1 {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Poppins', sans-serif;
       font-size: clamp(2rem, 8vw, 4rem);
       white-space: nowrap;
       margin-top: 1rem;
-      letter-spacing: 0.02em;
+      letter-spacing: 0.01em;
     }
     .hero p {
       font-size: 1.5rem;
@@ -106,11 +106,10 @@
       margin: auto;
     }
     .section h2 {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Poppins', sans-serif;
       font-size: 2rem;
       margin-bottom: 1rem;
       text-align: center;
-      letter-spacing: 0.02em;
     }
     .team-grid {
       display: flex;
@@ -132,7 +131,7 @@
       transform: scale(1.03);
     }
     .team-member h3 {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Poppins', sans-serif;
       margin-bottom: 0.5rem;
     }
     .team-member img {
@@ -158,9 +157,8 @@
       transition: background 0.3s ease;
     }
     .cta h2 {
-      font-family: 'Orbitron', sans-serif;
+      font-family: 'Poppins', sans-serif;
       font-size: 2.5rem;
-      letter-spacing: 0.02em;
     }
     .cta p {
       font-size: 1.3rem;
