--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
     html {
       scroll-behavior: smooth;
     }
+
     :root {
       color-scheme: light dark;
       background-color: #2c3e50;
     }
+
     * {
       box-sizing: border-box;
       margin: 0;
       padding: 0;
     }
+
     body {
       background-color: #2c3e50;
       font-family: 'Inter', sans-serif;
@@ -43,27 +46,34 @@
       z-index: 1000;
       opacity: 0;
       animation: fadeInHeader 1.5s ease-in-out 1.2s forwards;
-      flex-wrap: wrap;
+      flex-wrap: nowrap;
+      gap: 1rem;
     }
 
     header img {
       height: 40px;
       max-width: 150px;
       object-fit: contain;
+      flex-shrink: 0;
     }
 
     nav {
       display: flex;
+      justify-content: flex-end;
       align-items: center;
-      gap: 1rem;
+      gap: 0.5rem;
+      flex-shrink: 1;
+      flex-grow: 1;
+      overflow-x: auto;
     }
 
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1rem;
-      padding: 0.5rem 0.25rem;
+      font-size: 0.95rem;
+      padding: 0.4rem 0.5rem;
+      white-space: nowrap;
     }
 
     nav a:hover {
@@ -213,27 +223,23 @@
       padding: 2rem 1rem;
     }
 
-    @media (max-width: 768px) {
+    @media (max-width: 480px) {
       header {
         flex-direction: column;
         align-items: flex-start;
       }
 
       nav {
-        flex-direction: column;
-        align-items: flex-end;
-        width: 100%;
-        margin-top: 0.5rem;
+        justify-content: flex-start;
+        flex-wrap: wrap;
       }
 
       nav a {
-        padding: 0.4rem 0.75rem;
-        width: auto;
-        font-size: 0.95rem;
+        padding: 0.5rem 0.75rem;
       }
 
       .hero h1 {
-        font-size: 2.2rem;
+        font-size: 2rem;
         white-space: normal;
       }
 
