--- a/index.html
+++ b/index.html
@@ -40,14 +40,13 @@
       color: white;
       display: flex;
       justify-content: space-between;
-      align-items: center;
+      align-items: flex-start;
       position: sticky;
       top: 0;
       z-index: 1000;
       opacity: 0;
       animation: fadeInHeader 1.5s ease-in-out 1.2s forwards;
       flex-wrap: nowrap;
-      gap: 1rem;
     }
 
     header img {
@@ -59,12 +58,7 @@
 
     nav {
       display: flex;
-      justify-content: flex-end;
-      align-items: center;
       gap: 0.5rem;
-      flex-shrink: 1;
-      flex-grow: 1;
-      overflow-x: auto;
     }
 
     nav a {
@@ -223,23 +217,25 @@
       padding: 2rem 1rem;
     }
 
-    @media (max-width: 480px) {
+    @media (max-width: 768px) {
       header {
-        flex-direction: column;
+        flex-direction: row;
         align-items: flex-start;
       }
 
       nav {
-        justify-content: flex-start;
-        flex-wrap: wrap;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-left: auto;
+        gap: 0.25rem;
       }
 
       nav a {
-        padding: 0.5rem 0.75rem;
+        padding: 0.25rem 0.5rem;
       }
 
       .hero h1 {
-        font-size: 2rem;
+        font-size: 2.2rem;
         white-space: normal;
       }
 
