Update index.html bold team section

--- a/index.html
+++ b/index.html
@@ -167,6 +167,12 @@
       pointer-events: none;
     }
 
+    .team-member p strong {
+      font-weight: 600;
+      display: block;
+      margin-bottom: 0.25rem;
+    }
+
     .cta {
       background: linear-gradient(160deg, #4ca1af 0%, #56ab2f 100%);
       text-align: center;
@@ -298,35 +304,35 @@
       <div class="team-member">
         <img src="Thomas_Stephens.jpg" alt="Thomas Stephens">
         <h3>Thomas Stephens</h3>
-        <p>CEO / CTO / Founder</p>
+        <p><strong>CEO / CTO / Founder</strong></p>
         <p>Visionary technologist creating the tools of tomorrow.</p>
         <a href="https://tmsteph.com" target="_blank">tmsteph.com</a>
       </div>
       <div class="team-member">
         <img src="Bodhi_Lowski.jpg" alt="Bodhi Lowski">
         <h3>Bodhi Lowski</h3>
-        <p>Chief Marketing Officer</p>
+        <p><strong>Chief Marketing Officer</strong></p>
         <p>Building the brand through grassroots storytelling and growth.</p>
         <a href="https://bodhi-lowski.vercel.app/" target="_blank">bodhi-lowski.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="David_Martinez.jpg" alt="David Martinez">
         <h3>David Martinez</h3>
-        <p>Lead Developer</p>
+        <p><strong>Lead Developer</strong></p>
         <p>Crafting immersive 3D and web experiences with finesse.</p>
         <a href="https://david-martinez.vercel.app/" target="_blank">david-martinez.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="Esai_Gamboa.jpg" alt="Esai Gamboa">
         <h3>Esai Gamboa</h3>
-        <p>Developer</p>
+        <p><strong>Developer</strong></p>
         <p>Frontend expert focused on clean, responsive interfaces.</p>
         <a href="https://esai-gamboa.vercel.app/" target="_blank">esai-gamboa.vercel.app</a>
       </div>
       <div class="team-member">
         <img src="Brandon_Adolfo.jpg" alt="Brandon Adolfo">
         <h3>Brandon Adolfo</h3>
-        <p>Developer</p>
+        <p><strong>Developer</strong></p>
         <p>Cross-platform mobile builder with an eye for design.</p>
         <a href="https://brandon-adolfo.vercel.app/" target="_blank">brandon-adolfo.vercel.app</a>
       </div>
